<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com"
    android:key="preference_screen" >

    <ListPreference
        android:id="@+id/pref_theme"
        android:defaultValue="@string/theme_black_n_white"
        android:dialogTitle="@string/pref_theme_dialog_title"
        android:entries="@array/list_of_theme_entries"
        android:entryValues="@array/list_of_theme_entries"
        android:key="@string/pref_theme_key"
        android:summary="@string/pref_theme_summary"
        android:title="@string/pref_theme_title" />

    <CheckBoxPreference
        android:id="@+id/pref_swipe_morph"
        android:defaultValue="true"
        android:enabled="true"
        android:key="@string/pref_swipe_morph_key"
        android:summary="@string/pref_swipe_morph_summary"
        android:title="@string/pref_swipe_morph_title" />
    
    <com.robobunny.SeekBarPreference
        android:defaultValue="70"
        android:key="@string/pref_brightness_key"
        android:max="100"
        android:summary="@string/pref_brightness_summary"
        android:title="@string/pref_brightness_title"
        robobunny:min="10"
        robobunny:unitsLeft=""
        robobunny:unitsRight="%" />
    
        <Preference
            android:id="@+id/pref_share"
            android:title="@string/pref_share_title" >

        <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="se.kjellstrand.julia.ShareActivity"
                android:targetPackage="se.kjellstrand.julia"/>
    </Preference>

</PreferenceScreen>